--- a/src/app/Components/BackOffice/drivers/create-driver/create-driver.component.html
+++ b/src/app/Components/BackOffice/drivers/create-driver/create-driver.component.html
@@ -38,6 +38,16 @@
       </select>
     </div>
     
+    <div class="form-group">
+      <label for="licenseNumberD" class="label">License Number</label>
+      <input id="licenseNumberD" [(ngModel)]="driver.licenseNumberD" name="licenseNumberD" class="input-field" required />
+    </div>
+    
+    <div class="form-group">
+      <label for="insuranceDetailsD" class="label">Insurance Details</label>
+      <input id="insuranceDetailsD" [(ngModel)]="driver.insuranceDetailsD" name="insuranceDetailsD" class="input-field" required />
+    </div>
+    
 
     <div class="form-group checkbox-group">
       <label for="availabilityD" class="checkbox-label">Available</label>
