--- a/src/app/Components/DriverInterface/trip/trip-list/trip-list.component.html
+++ b/src/app/Components/DriverInterface/trip/trip-list/trip-list.component.html
@@ -62,6 +62,9 @@
               </span>
             </td>
             <td class="action-buttons">
+              <ng-container *ngIf="trip.reservationStatus === 'CONFIRMED'">
+                <button class="complete-btn" (click)="completeTrip(trip)">Complete</button>
+              </ng-container>
               <ng-container *ngIf="trip.reservationStatus === 'PENDING'">
                 <button class="accept-btn" (click)="acceptTrip(trip)">Accept</button>
                 <button class="refuse-btn" (click)="refuseTrip(trip)">Refuse</button>
