--- a/src/assets/BackOffice/scss/_variable.scss
+++ b/src/assets/BackOffice/scss/_variable.scss
@@ -5,10 +5,10 @@
 $themecolor: #800f0f;  // Red
 $themecolor-dark: #660a0a; // Dark Red
 $themecolor-alt: #f2e082;  // Yellow
-$theme-light: #fff;
+$theme-light: #f5f3f3;
 $theme-dark: #292121;
 
-$skin5: #a31212;
+$skin5: #6b0303;
 $skin6: $theme-light;
 
 // Topbar settings
@@ -23,10 +23,10 @@ $topbar-navbrand-padding: 0 10px 0 10px;
 $sidebar: $theme-light;
 $sidebar-text: #fff;
 $sidebar-icons: #fff;
-$sidebar-text-dark: #212529;
+$sidebar-text-dark: #290303;
 $sidebar-icons-dark: #4f5467;
 
-$sidebar-width-full: 250px;
+$sidebar-width-full: 220px;
 $sidebar-width-mini: 65px;
 
 // Layout settings
