--- a/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
+++ b/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
@@ -2,8 +2,8 @@
     <div class="card-body">
         <div class="d-md-flex align-items-center">
             <div>
-                <h4 class="card-title">Sales Summary</h4>
-                <h5 class="card-subtitle">Yearly Sales Report</h5>
+                <h4 class="card-title">Monthly Revenue Summary</h4>
+                <h5 class="card-subtitle">Trip Revenue Report for the Year</h5>
             </div>
         </div>
         <div class="row mt-4">
