--- a/src/app/Components/BackOffice/drivers/drivers.component.html
+++ b/src/app/Components/BackOffice/drivers/drivers.component.html
@@ -70,8 +70,8 @@
             <td>{{ driver.address }}</td>
             <td>{{ driver.cin }}</td>
             <td>
-              <span [class.available]="driver.availibilityD" [class.unavailable]="!driver.availibilityD">
-                {{ driver.availibilityD ? 'Available' : 'Unavailable' }}
+              <span [class.available]="driver.availabilityD" [class.unavailable]="!driver.availabilityD">
+                {{ driver.availabilityD ? 'Available' : 'Unavailable' }}
               </span>
             </td>
             <td>
