--- a/src/app/Shared/footer/footer.component.scss
+++ b/src/app/Shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #921c1c; // Modern dark blue shade
+    background-color: #6b0303; // Modern dark blue shade
     color: white;
     padding: 50px 0;
     width: 100%;
