--- a/src/app/Shared/layouts/full/full.component.html
+++ b/src/app/Shared/layouts/full/full.component.html
@@ -1,6 +1,3 @@
-<!-- ============================================================== -->
-<!-- Main wrapper - style you can find in pages.scss -->
-<!-- ============================================================== -->
 <div
   id="main-wrapper"
   [ngClass]="{ 'show-sidebar': showMobileMenu }"
@@ -18,34 +15,20 @@
   <header *ngIf="!hideSidebarAndHeader" class="topbar" data-navbarbg="skin5">
     <nav class="d-flex top-navbar navbar-expand-lg navbar-dark">
       <div class="navbar-header" [ngClass]="expandLogo ? 'expand-logo' : ''" data-logobg="skin6">
-        <!-- This is for the sidebar toggle which is visible on mobile only -->
-        <a (click)="showMobileMenu = !showMobileMenu"
-           class="nav-toggler waves-effect waves-light d-block d-lg-none"
-           href="javascript:void(0)">
+        <a (click)="showMobileMenu = !showMobileMenu" class="nav-toggler waves-effect waves-light d-block d-lg-none" href="javascript:void(0)">
           <i [ngClass]="showMobileMenu ? 'bi bi-text-left fs-6' : 'bi bi-text-left fs-6'"></i>
         </a>
-        
         <!-- Logo -->
         <a class="navbar-brand" href="/">
           <b class="logo-icon" style="width : 1200px">
-            <img src="assets/FrontOffice/images/logos/SpeedyGo (10).png" alt="homepage" style="width : 1200px" class="dark-logo" />
+            <img src="assets/FrontOffice/images/logos/logoSpeedy.png" alt="homepage" style="width : 1200px" class="dark-logo" />
           </b>
         </a>
-        
         <!-- Mobile toggle -->
-        <a class="topbartoggler d-block d-lg-none waves-effect waves-light"
-           href="javascript:void(0)"
-           data-toggle="collapse"
-           data-target="#navbarSupportedContent"
-           aria-controls="navbarSupportedContent"
-           aria-expanded="false"
-           aria-label="Toggle navigation"
-           (click)="isCollapsed = !isCollapsed"
-           [attr.aria-expanded]="!isCollapsed">
+        <a class="topbartoggler d-block d-lg-none waves-effect waves-light" href="javascript:void(0)" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
           <i class="bi bi-text-right fs-6"></i>
         </a>
       </div>
-      
       <!-- Navbar links collapse -->
       <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5" [ngbCollapse]="!isCollapsed">
         <app-navigation (toggleSidebar)="toggleSidebarType()" class="w-100"></app-navigation>
@@ -54,22 +37,19 @@
   </header>
 
   <!-- ============================================================== -->
-  <!-- Left Sidebar - style you can find in sidebar.scss  -->
+  <!-- Left Sidebar - style you can find in sidebar.scss -->
   <!-- ============================================================== -->
   <aside *ngIf="!hideSidebarAndHeader" class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
     <app-sidebar></app-sidebar>
   </aside>
   <!-- ============================================================== -->
-  <!-- End Left Sidebar - style you can find in sidebar.scss  -->
+  <!-- End Left Sidebar - style you can find in sidebar.scss -->
   <!-- ============================================================== -->
 
   <!-- ============================================================== -->
-  <!-- Page wrapper  -->
+  <!-- Page wrapper -->
   <!-- ============================================================== -->
   <div class="page-wrapper">
-    <!-- ============================================================== -->
-    <!-- Container fluid  -->
-    <!-- ============================================================== -->
     <div class="container-fluid">
       <!-- ============================================================== -->
       <!-- Start Page Content -->
@@ -79,9 +59,5 @@
       <!-- End Start Page Content -->
       <!-- ============================================================== -->
     </div>
-    <!-- ============================================================== -->
-    <!-- End Container fluid  -->
-    <!-- ============================================================== -->
-     
   </div>
 </div>
