--- a/src/assets/FrontOffice/scss/_components.scss
+++ b/src/assets/FrontOffice/scss/_components.scss
@@ -261,9 +261,8 @@ input, select {
   height: 45px; /* Maintain aspect ratio */
   border-radius: 50%; /* Ensures it remains round */
   object-fit: cover; /* Prevents stretching */
-  border: 2px solid #ffffff; /* Optional: White border for a clean look */
+  border: 1px solid #a59b9b; /* Optional: White border for a clean look */
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Optional: Adds subtle shadow */
 }
-
 
 
